--- a/composer.json
+++ b/composer.json
@@ -16,12 +16,12 @@
         "php": ">=7.2.5",
         "doctrine/cache": "^1.0",
         "guzzlehttp/guzzle": "^6.2",
-        "symfony/form": "^4.4|^5.2",
-        "symfony/config": "^4.4|^5.2"
+        "symfony/form": "^5.2|^6.0",
+        "symfony/config": "^5.2|^6.0"
     },
     "require-dev": {
-        "symfony/framework-bundle": "^4.4|^5.2",
-        "symfony/phpunit-bridge": "^5.2"
+        "symfony/framework-bundle": "^5.2|^6.0",
+        "symfony/phpunit-bridge": "^5.2|^6.0"
     },
     "autoload": {
         "psr-4": {
